inicio do conteudo

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo do site</title>
+    <title>e</title>
 </head>
 <body>
    <main>
-    <header>
-        <h1>Titulo do site</h1>
-    </header>
-    <article>
-        <h2>Artigo 001</h2>
-        <p>Texto do artigo 001</p>
-    </article>
+        <header>
+            <h1>Cursos Grátis</h1>
+        </header>
         <article>
-        <h2>Artigo 002</h2>
-        <p>Texto do artigo 00</p>
-    </article>
-   </main> 
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis maiores rerum, laborum soluta ad deleniti similique cupiditate aliquid nobis corporis, nulla dolor voluptatum magni! Enim atque deserunt dignissimos consectetur alias.</p>
+        </article>
+            <article>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore beatae quibusdam hic omnis molestias libero quod necessitatibus officia, aliquid error consectetur pariatur alias, recusandae excepturi? Explicabo architecto neque accusantium totam.</p>
+        </article>
+    </main> 
 </body>
 </html>
